--- a/Plugins/GStreamer/GStreamer.uplugin
+++ b/Plugins/GStreamer/GStreamer.uplugin
@@ -14,7 +14,7 @@
       "Name": "GStreamer",
       "Type": "Runtime",
       "LoadingPhase": "PostEngineInit",
-      "WhitelistPlatforms": [ "Win64" ]
+      "WhitelistPlatforms": [ "Win64", "Linux" ]
     }
   ]
 }
