--- a/Plugins/GStreamer/GStreamer.uplugin
+++ b/Plugins/GStreamer/GStreamer.uplugin
@@ -1,20 +1,27 @@
 {
-  "FileVersion": 3,
-  "Version": 1,
-  "VersionName": "0.0.1",
-  "FriendlyName": "GStreamer",
-  "Description": "",
-  "CreatedBy": "",
-  "CreatedByURL": "",
-  "DocsURL": "",
-  "Category": "Media",
-  "CanContainContent": true,
-  "Modules": [
-    {
-      "Name": "GStreamer",
-      "Type": "Runtime",
-      "LoadingPhase": "PostEngineInit",
-      "WhitelistPlatforms": [ "Win64", "Linux" ]
-    }
-  ]
+	"FileVersion": 3,
+	"Version": 1,
+	"VersionName": "0.0.1",
+	"FriendlyName": "GStreamer",
+	"Description": "",
+	"Category": "Media",
+	"CreatedBy": "",
+	"CreatedByURL": "",
+	"DocsURL": "",
+	"MarketplaceURL": "",
+	"SupportURL": "",
+	"EngineVersion": "5.1.0",
+	"CanContainContent": true,
+	"Installed": true,
+	"Modules": [
+		{
+			"Name": "GStreamer",
+			"Type": "Runtime",
+			"LoadingPhase": "PostEngineInit",
+			"PlatformAllowList": [
+				"Win64",
+				"Linux"
+			]
+		}
+	]
 }
